--- a/GarajYeri.Web/Views/VehicleProcess/Index.cshtml
+++ b/GarajYeri.Web/Views/VehicleProcess/Index.cshtml
@@ -102,7 +102,7 @@
                         vehicleId: $("#ddlVehicle").val(),
                         vehicleProcessTypeId: $("#ddlProcessType").val(),
                         price: $("#txtPrice").val(),
-                        odometer: $("#txtOdemeter").val(),
+                        odemeter: $("#txtOdemeter").val(),
                         description: $("#txtDescription").val()
                     }
 
